--- a/src/Components/style/Home.css
+++ b/src/Components/style/Home.css
@@ -1,5 +1,5 @@
 body{
-    background-color: #ffffff;
+    background-color: #b6dfdf;
     /*background-image: url("../assets/blue-folder-free-images-186360.png");
     /*background-position: center; /* Center the image */
     /*background-repeat: no-repeat; Do not repeat the image
@@ -7,3 +7,13 @@ body{
 
 }
 
+.introduction {
+
+}
+
+.App-header {
+  background-color: #222;
+  color: white;
+  font-size: 1.25rem;
+  padding: 50px 50px 0px;
+}
