--- a/src/Components/style/Home.css
+++ b/src/Components/style/Home.css
@@ -3,8 +3,9 @@ body{
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #007dd7;
   color: white;
-  font-size: 1.25rem;
-  padding: 50px 50px 0px;
+  font-size: 2.25rem;
+  padding: 10px 10px 10px;
+  font: small-caps bold 2.25rem cursive;
 }
